change action files

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,22 @@
+name: Liquibase Update
 
+on:
+  push:
+    branches:
+      - main  # or your default branch
+
+jobs:
+  liquibase-update:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run Liquibase Update
+        env:
+          DATABASE_URL: ${{ secrets.DB_URL }}
+          DATABASE_USERNAME: root
+          DATABASE_PASSWORD: ${{ secrets.DB_PWD }}
+        run: |
+          ./liquibase --url=$DATABASE_URL --username=$DATABASE_USERNAME --password=$DATABASE_PASSWORD update
