--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
           changelogFile: "example-changelog.sql"
           driver: "com.mysql.jdbc.Driver"
           url: ${{ secrets.DB_URL }}
-          driverPropertiesFile: "./lib/mysql-connector-j-8.1.0.jar"
+          driverPropertiesFile: "lib/mysql-connector-j-8.1.0.jar"
           logLevel: "flag"
